[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "truststate"
version = "0.2.0"
description = "Python SDK for TrustState compliance validation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["compliance", "AI governance", "truststate", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
    "dataclasses-json>=0.6",
]

[project.optional-dependencies]
fastapi = ["starlette>=0.27"]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://trustchainlabs.com"
Repository = "https://github.com/MyreneBot/truststate-py"
"Bug Tracker" = "https://github.com/MyreneBot/truststate-py/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["truststate*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
